# wplace-timelapse

./: .gitignore  INSTALL.md  LICENSE  README.md  cleanup_backups.py  config.example.json  main.py  prune_placeholder_sessions.py  pyproject.toml  requirements.txt  run_full_timelapse.sh  wplace-timelapse.code-workspace
.woodpecker/: build.yml
historical_backfill/: README.md  __init__.py  cli.py  fetch_nemo_history.sh  generator.py  github_client.py  models.py  releases.py
images/WplaceRecorder/: Dockerfile  entrypoint.sh
scripts/: migrate_to_serverless.py  run_migration.sh
tests/: test_auto_crop.py  test_background_color.py  test_cleanup_backups.py  test_cleanup_output_repair.py  test_full_timelapse_incremental.py  test_migrations.py  test_nemo_dataset.py  test_placeholder_resolution.py  test_scheduler_startup.py  test_stats_report.py  test_tile_cache_fallback.py
timelapse_backup/: __init__.py  app.py  cleanup.py  config.py  full_timelapse.py  logging_setup.py  manifests.py  migrations.py  models.py  progress.py  rendering.py  scheduler.py  sessions.py  stats.py  tiles.py
